--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -1,12 +1,11 @@
 /* Reset */
-{
-    margin: 0
-;
-    padding: 0
-;
-    box-sizing: border-box
-;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+/* 바디 */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #fff;
